syntax = "proto3";

option go_package="github.com/wansnow/calculation_server/service/start_game";

package CompetitionPlatform.proto.api;

service StartGame {
    rpc StartGame(GameMsg.Request) returns (stream GameMsg.Response);
}

message GameMsg {
    message Request{
        string id = 1;
        string main_logic_func = 2;
        string attacked_func = 3;
        string crash_func = 4;
        string discover_func = 5;
    }

    message Response {

    }
}